# conda-rattler-solver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pixi.toml  pyproject.toml
.github/workflows/: tests.yml
conda_rattler_solver/: index.py  plugin.py  shards.py  shards_subset.py  solver.py  state.py  utils.py
dev/: requirements.txt
recipe/: meta.yaml  run_test.bat  run_test.sh
tests/: requirements.txt  test_channels.py  test_index.py  test_solver.py  test_solver_differences.py  test_workarounds.py
tests/data/conditional-repodata/noarch/: repodata.json
